--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="all_songs">所有音乐</string>
-    <string name="my_sheets">我的歌单</string>
     <string name="recently">最近播放</string>
+    <string name="recommend">每日推荐</string>
+    <string name="local">本地音乐</string>
+    <string name="setting">设置</string>
+    <string name="about_me">关于我</string>
+    <string name="change_skin">个性换肤</string>
+    <string name="sheet">我的歌单</string>
 </resources>
