--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="song">单曲</string>
     <string name="singer">歌手</string>
     <string name="directory">文件夹</string>
+    <string name="empty_tips">暂无内容</string>
 </resources>
